--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
 
 <body class="home page page-id-88 page-template page-template-homepage2 page-template-homepage2-php yo-anim-enabled sticky-nav wpb-js-composer js-comp-ver-4.11.2.1 vc_responsive scrollable">
 
-<div id="preloader" class="" style="opacity: 0; display: none;">
+<div id="preloader" class="">
     <div id="status">
         <div class="loading-wrapper">
             <img src="files/logo2.png" alt="Loading" class="ready">
