--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1, minimum-scale=1.0, maximum-scale=1.0, minimal-ui">
-    <title>BERG | Restaurant Wordpres Theme</title>
+    <title>ПАРК Ресторан | Главная</title>
 
     <script async="" src="js/analytics.js"></script>
     <script src="js/webfont.js" type="text/javascript" async=""></script>
@@ -90,18 +90,18 @@
     <script type="text/javascript" src="js/add-to-cart.min.js"></script>
     <script type="text/javascript" src="js/woocommerce-add-to-cart.js"></script>
 
-   <style type="text/css">
-        .recentcomments a {
-        display: inline !important;
-        padding: 0 !important;
-        margin: 0 !important;
-    }</style>
     <style type="text/css">
         .recentcomments a {
-        display: inline !important;
-        padding: 0 !important;
-        margin: 0 !important;
-    }</style>
+            display: inline !important;
+            padding: 0 !important;
+            margin: 0 !important;
+        }</style>
+    <style type="text/css">
+        .recentcomments a {
+            display: inline !important;
+            padding: 0 !important;
+            margin: 0 !important;
+        }</style>
 
     <style>
         .mobile-nav .logo {
@@ -168,7 +168,7 @@
         <div class="container-fluid">
             <ul class="menu-header">
                 <li class="pull-left">
-                    <a href="http://demo.yosoftware.com/wp/berg-wp1" class="logo">
+                    <a href="/" class="logo">
                         <figure>
                             <img src="files/logo-balck.png" class="" alt="BERG">
                         </figure>
@@ -274,7 +274,7 @@
                         </div>
                     </div>
                 </li>
-                <li class="layer" data-depth="0.70"
+                <li class="layer layer-btn" data-depth="0.70"
                     style="position: absolute; display: block; left: 0px; top: 0px; transform: translate3d(-41.5538px, -27.0123px, 0px); transform-style: preserve-3d; backface-visibility: hidden;">
                     <div class="button-wrapper">
 					<span class="button-content button-text">
@@ -285,7 +285,23 @@
 					</span>
                     </div>
                 </li>
+                <li class="layer" data-depth="0.40">
+                    <div class="sheet sheet-1">
+                        <img src="files/sheet-1.png" alt="">
+                    </div>
+                </li>
+                <li class="layer" data-depth="0.20">
+                    <div class="sheet sheet-2">
+                        <img src="files/sheet-2.png" alt="">
+                    </div>
+                </li>
+                <li class="layer" data-depth="0.10">
+                    <div class="sheet sheet-3">
+                        <img src="files/sheet-3.png" alt="">
+                    </div>
+                </li>
             </ul>
+
 
         </div>
 
@@ -306,8 +322,10 @@
                                             гостей, с европейским и восточным меню от<br>
                                             шеф-повара Сергея Воюцкого.</p>
                                         <h3 style="text-align: left;"><strong>Контакты</strong></h3>
-                                        <p style="text-align: left;">+7 (812) 95 95 700 / <a href="mailto:family@park-rest.ru">family@park-rest.ru</a></p>
-                                        <p style="text-align: left;">ул. Жукова, 1 (пересечение с Пискаревским пр-том)<br>
+                                        <p style="text-align: left;">+7 (812) 95 95 700 / <a
+                                                href="mailto:family@park-rest.ru">family@park-rest.ru</a></p>
+                                        <p style="text-align: left;">ул. Жукова, 1 (пересечение с Пискаревским
+                                            пр-том)<br>
                                             Санкт-Петербург, Россия</p>
                                         <h3 style="text-align: left;">Мы открыты</h3>
                                         <p style="text-align: left;">Понедельник - Четверг: 10:00 - 00:00<br>
