--- a/index.html
+++ b/index.html
@@ -1,5 +1,4 @@
 <!DOCTYPE html>
-<!-- saved from url=(0039)http://demo.yosoftware.com/wp/berg-wp1/ -->
 <html lang="en-US"
       class="wf-lato-i4-active wf-lato-i7-active wf-lato-i9-active wf-cabin-n4-active wf-cabin-n5-active wf-cabin-n6-active wf-cabin-n7-active wf-cabin-i4-active wf-cabin-i5-active wf-cabin-i6-active wf-cabin-i7-active wf-lato-n1-active wf-lato-n3-active wf-lato-n4-active wf-lato-n7-active wf-lato-n9-active wf-lato-i1-active wf-lato-i3-active wf-active js_active  vc_desktop  vc_transform  vc_transform ">
 <head>
@@ -545,7 +544,7 @@
 
     <div class="nav-fixed-bar hidden-xs hidden-sm nav-alt">
         <div class="logo pull-left">
-            <a href="http://demo.yosoftware.com/wp/berg-wp1">
+            <a href="/">
                 <figure class="static-logo">
                     <span class="spacer"></span>
 
