--- a/gallery.html
+++ b/gallery.html
@@ -6,7 +6,7 @@
 
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1, minimum-scale=1.0, maximum-scale=1.0, minimal-ui">
-    <title>ПАРК Ресторан | Главная</title>
+    <title>ПАРК Ресторан | Gallery</title>
 
     <script async="" src="js/analytics.js"></script>
     <script src="js/webfont.js" type="text/javascript" async=""></script>
@@ -154,7 +154,7 @@
                     <a>меню</a>
                 </li>
                 <li class="menu-item">
-                    <a>галерея</a>
+                    <a href="gallery.html">галерея</a>
                 </li>
                 <li class="menu-item">
                     <a>новости</a>
@@ -209,7 +209,7 @@
                 <a>меню</a>
             </li>
             <li class="menu-item">
-                <a>галерея</a>
+                <a href="gallery.html">галерея</a>
             </li>
             <li class="menu-item">
                 <a>новости</a>
@@ -478,7 +478,7 @@
                     <a>меню</a>
                 </li>
                 <li class="menu-item">
-                    <a>галерея</a>
+                    <a href="gallery.html">галерея</a>
                 </li>
                 <li class="menu-item">
                     <a>новости</a>
