--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
                     <a>меню</a>
                 </li>
                 <li class="menu-item">
-                    <a>галерея</a>
+                    <a href="gallery.html">галерея</a>
                 </li>
                 <li class="menu-item">
                     <a>новости</a>
@@ -196,7 +196,7 @@
                 <a>меню</a>
             </li>
             <li class="menu-item">
-                <a>галерея</a>
+                <a href="gallery.html">галерея</a>
             </li>
             <li class="menu-item">
                 <a>новости</a>
@@ -564,7 +564,7 @@
                     <a>меню</a>
                 </li>
                 <li class="menu-item">
-                    <a>галерея</a>
+                    <a href="gallery.html">галерея</a>
                 </li>
                 <li class="menu-item">
                     <a>новости</a>
