add about page and edit menu

--- a/index.html
+++ b/index.html
@@ -134,22 +134,22 @@
         <div class="main-nav bg-opacity-">
             <ul id="menu-v3" class="menu hidden-xs hidden-sm">
                 <li class="menu-item">
-                    <a>Главная</a>
+                    <a href="index.html">Главная</a>
                 </li>
                 <li class="menu-item">
-                    <a>о ресторане</a>
+                    <a href="about.html">о ресторане</a>
                 </li>
                 <li class="menu-item">
-                    <a>меню</a>
+                    <a href="menu.html">меню</a>
                 </li>
                 <li class="menu-item">
                     <a href="gallery.html">галерея</a>
                 </li>
                 <li class="menu-item">
-                    <a>новости</a>
+                    <a href="news.html">новости</a>
                 </li>
                 <li class="menu-item">
-                    <a>контакты</a>
+                    <a href="contact.html">контакты</a>
                 </li>
 
                 <li class="menu-item"><a href="#"><i class="fa fa-vk"></i></a></li>
@@ -187,22 +187,22 @@
     <div class="flyout-container">
         <ul id="menu-v3-1" class="menu">
             <li class="menu-item">
-                <a>Главная</a>
+                <a href="index.html">Главная</a>
             </li>
             <li class="menu-item">
-                <a>о ресторане</a>
+                <a href="about.html">о ресторане</a>
             </li>
             <li class="menu-item">
-                <a>меню</a>
+                <a href="menu.html">меню</a>
             </li>
             <li class="menu-item">
                 <a href="gallery.html">галерея</a>
             </li>
             <li class="menu-item">
-                <a>новости</a>
+                <a href="news.html">новости</a>
             </li>
             <li class="menu-item">
-                <a>контакты</a>
+                <a href="contact.html">контакты</a>
             </li>
             <li class="menu-item"><a href="#"><i class="fa fa-vk"></i></a></li>
             <li class="menu-item"><a href="#"><i class="fa fa-facebook"></i></a></li>
@@ -555,22 +555,22 @@
         <div class="main-nav">
             <ul id="menu-v3-2" class="menu hidden-xs hidden-sm">
                 <li class="menu-item">
-                    <a>Главная</a>
+                    <a href="index.html">Главная</a>
                 </li>
                 <li class="menu-item">
-                    <a>о ресторане</a>
+                    <a href="about.html">о ресторане</a>
                 </li>
                 <li class="menu-item">
-                    <a>меню</a>
+                    <a href="menu.html">меню</a>
                 </li>
                 <li class="menu-item">
                     <a href="gallery.html">галерея</a>
                 </li>
                 <li class="menu-item">
-                    <a>новости</a>
+                    <a href="news.html">новости</a>
                 </li>
                 <li class="menu-item">
-                    <a>контакты</a>
+                    <a href="contact.html">контакты</a>
                 </li>
                 <li class="menu-item"><a href="#"><i class="fa fa-vk"></i></a></li>
                 <li class="menu-item"><a href="#"><i class="fa fa-facebook"></i></a></li>
