--- a/menu.html
+++ b/menu.html
@@ -469,6 +469,10 @@
                         </div>
 
                     </div>
+
+                    <div class="center-block">
+                        <a href="#" class="btn btn-lg text-uppercase btn-download-pdf">скачать меню</a>
+                    </div>
                 </div>
             </div>
             <div class="category-14" data-myorder="1">
@@ -635,6 +639,10 @@
                             </div>
                         </div>
 
+                    </div>
+
+                    <div class="center-block">
+                        <a href="#" class="btn btn-lg text-uppercase btn-download-pdf">скачать меню</a>
                     </div>
                 </div>
             </div>
@@ -804,6 +812,10 @@
                         </div>
 
                     </div>
+
+                    <div class="center-block">
+                        <a href="#" class="btn btn-lg text-uppercase btn-download-pdf">скачать меню</a>
+                    </div>
                 </div>
             </div>
         </div>
@@ -835,9 +847,8 @@
 
                                     <div class="wpb_text_column wpb_content_element ">
                                         <div class="wpb_wrapper">
-                                            <p style="text-align: center;">* May contain nuts trace, if you have any
-                                                food allergies please let our stuff know. All prices are given in $
-                                                USD.</p>
+                                            <p style="text-align: center;">* Пожалуйста, предупредите официанта, если у
+                                                Вас есть какие-либо пищевые аллергии. Все цены указаны в рублях.</p>
 
                                         </div>
                                     </div>
@@ -849,10 +860,9 @@
                                                 <div class="wpb_wrapper">
                                                     <div class="wpb_text_column wpb_content_element ">
                                                         <div class="wpb_wrapper">
-                                                            <p>Waiting time</p>
-                                                            <p>Preparation time varies from dish to dish, on every it
-                                                                takes no longer than 35 minutes, at most 60 minutes.</p>
-
+                                                            <p>Время ожидания</p>
+                                                            <p>Время приготовления блюда уточняйте у официанта, как
+                                                                правило, оно составляет 20-35 минут.</p>
                                                         </div>
                                                     </div>
                                                 </div>
@@ -863,10 +873,9 @@
                                                 <div class="wpb_wrapper">
                                                     <div class="wpb_text_column wpb_content_element ">
                                                         <div class="wpb_wrapper">
-                                                            <p>Allergy information</p>
-                                                            <p>Aenean lacinia bibendum nulla sed consectetur. Cras
-                                                                mattis consectetur purus sit amet fermentum.</p>
-
+                                                            <p>Аллергены</p>
+                                                            <p>Некоторые блюда могут содержать аллергены, ваш официант
+                                                                предупредит об этом.</p>
                                                         </div>
                                                     </div>
                                                 </div>
@@ -877,10 +886,10 @@
                                                 <div class="wpb_wrapper">
                                                     <div class="wpb_text_column wpb_content_element ">
                                                         <div class="wpb_wrapper">
-                                                            <p>Slow Food</p>
-                                                            <p>Our lacinia bibendum nulla sed consectetur. Cras mattis
-                                                                consectetur purus sit amet fermentum.</p>
-
+                                                            <p>Гости с детьми</p>
+                                                            <p>Вы можете воспользоваться детской комнатой, если пришли с
+                                                                ребенком. Стульчики и детское меню спрашивайте у
+                                                                официанта.</p>
                                                         </div>
                                                     </div>
                                                 </div>
@@ -891,10 +900,10 @@
                                                 <div class="wpb_wrapper">
                                                     <div class="wpb_text_column wpb_content_element ">
                                                         <div class="wpb_wrapper">
-                                                            <p>Dress code</p>
-                                                            <p>We prefer smart, smart casual clothing. No shorts or dogs
-                                                                allowed.</p>
-
+                                                            <p>Дресс-код</p>
+                                                            <p>Ресторан принято посещать в элегантной повседневной
+                                                                одежде. Запрещена пляжная одежда и посещение с
+                                                                животными.</p>
                                                         </div>
                                                     </div>
                                                 </div>
@@ -941,8 +950,10 @@
                                         <div class="wpb_wrapper">
                                             <p style="text-align: center;">
                                                 <a href="#" class="social-link-footer"><i class="fa fa-vk"></i></a>
-                                                <a href="#" class="social-link-footer"><i class="fa fa-facebook"></i></a>
-                                                <a href="#" class="social-link-footer"><i class="fa fa-instagram"></i></a>
+                                                <a href="#" class="social-link-footer"><i
+                                                        class="fa fa-facebook"></i></a>
+                                                <a href="#" class="social-link-footer"><i
+                                                        class="fa fa-instagram"></i></a>
                                             </p>
                                         </div>
                                     </div>
