edit sheet element

--- a/contact.html
+++ b/contact.html
@@ -110,7 +110,7 @@
 </head>
 
 
-<body class="page page-id-382 page-template page-template-contact2 page-template-contact2-php yo-anim-enabled no-intro sticky-nav wpb-js-composer js-comp-ver-4.11.2.1 vc_responsive">
+<body class="page page-contact page-id-382 page-template page-template-contact2 page-template-contact2-php yo-anim-enabled no-intro sticky-nav wpb-js-composer js-comp-ver-4.11.2.1 vc_responsive">
 
 <div id="preloader" class="">
     <div id="status">
@@ -222,6 +222,25 @@
     </div>
 </div>
 <div class="content-wrapper" style="opacity: 0">
+
+    <ul id="scene"
+        style="transform: translate3d(0px, 0px, 0px); transform-style: preserve-3d; backface-visibility: hidden;">
+        <li class="layer" data-depth="0.40">
+            <div class="sheet sheet-1" style="width: 168px;">
+                <img src="files/sheet-1.png" width="168" height="341" alt="">
+            </div>
+        </li>
+        <li class="layer" data-depth="0.20">
+            <div class="sheet sheet-2" style="width: 181px;">
+                <img src="files/sheet-2.png" width="181" height="157" alt="">
+            </div>
+        </li>
+        <li class="layer" data-depth="0.10">
+            <div class="sheet sheet-3" style="width: 125px;">
+                <img src="files/sheet-3.png" width="125" height="179" alt="">
+            </div>
+        </li>
+    </ul>
 
     <header class="main-section contact-new-page no-intro-padding">
         <div class="contact-bg-fullscreen">
