--- a/about.html
+++ b/about.html
@@ -110,7 +110,7 @@
 </head>
 
 
-<body class="page page-id-115 page-template page-template-restaurant page-template-restaurant-php yo-anim-enabled fullpage-scroll no-smooth-scroll no-intro sticky-nav wpb-js-composer js-comp-ver-4.11.2.1 vc_responsive">
+<body class="page page-element-sheets page-id-115 page-template page-template-restaurant page-template-restaurant-php yo-anim-enabled fullpage-scroll no-smooth-scroll no-intro sticky-nav wpb-js-composer js-comp-ver-4.11.2.1 vc_responsive">
 
 <div id="preloader" class="">
     <div id="status">
