--- a/index.html
+++ b/index.html
@@ -277,7 +277,7 @@
                     style="position: absolute; display: block; left: 0px; top: 0px; transform: translate3d(-41.5538px, -27.0123px, 0px); transform-style: preserve-3d; backface-visibility: hidden;">
                     <div class="button-wrapper">
 					<span class="button-content button-text">
-                        <a href="http://demo.yosoftware.com/wp/berg-wp1/menu-list-new"
+                        <a href="menu.html"
                            class="second-line" data-replace="12 | 04 | 2017"
                            data-base="НАШЕ МЕНЮ">НАШЕ МЕНЮ</a>
 						<div id="reservation-trigger"></div>
@@ -344,7 +344,7 @@
                     </div>
                 </div>
 
-                <a href="http://demo.yosoftware.com/wp/berg-wp1/menu-list-new"
+                <a href="menu.html"
                    class="hidden-md hidden-lg booking-switch home-left-button"
                    style="font-family: lato; font-weight: 900; font-size: 12px; letter-spacing: 2px; padding: 15px; border: 2px solid #333; text-align: center; cursor: pointer; margin-bottom: 15px; "><span>НАШЕ МЕНЮ</span></a>
 
