--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@
                         <div class="button-table-bottom">
                             <div class="button-table-bottom-cell">
                                 <h1>
-                                    <span class="first-line" data-replace="Date" data-base="ДОБРО ПОЖАЛОВАТЬ В ПАРК">ДОБРО ПОЖАЛОВАТЬ В ПАРК</span>
+                                    <span class="first-line" data-replace="Дата" data-base="ДОБРО ПОЖАЛОВАТЬ В ПАРК">ДОБРО ПОЖАЛОВАТЬ В ПАРК</span>
                                 </h1>
                             </div>
                         </div>
@@ -461,14 +461,14 @@
 
                 </div>
                 <div class="datepicker-submit form-submit">
-                    <div class="form-close">CLOSE</div>
-                    <div class="form-next-step">NEXT STEP <span><span class="sup">1</span>/<span
-                            class="sub">3</span></span></div>
+                    <div class="form-close">ЗАКРЫТЬ</div>
+                    <div class="form-next-step">Далее <span><span class="sup">1</span>/<span
+                            class="sub">4</span></span></div>
                 </div>
             </div>
             <div class="reservation-form-2">
                 <div class="form-inner-wrapper">
-                    <h1>Time</h1>
+                    <h1>Время</h1>
                     <span class="spinner-frame">
 					<span class="spinner-wrapper">
 						<span class="value spinner-hour">12</span> <i class="fa fa-angle-up spinner-up"></i><i
@@ -485,14 +485,14 @@
 									</span>
                 </div>
                 <div class="timepicker-submit form-submit">
-                    <div class="form-close">CLOSE</div>
-                    <div class="form-next-step">NEXT STEP <span><span class="sup">2</span>/<span
-                            class="sub">3</span></span></div>
+                    <div class="form-close">ЗАКРЫТЬ</div>
+                    <div class="form-next-step">Далее <span><span class="sup">2</span>/<span
+                            class="sub">4</span></span></div>
                 </div>
             </div>
             <div class="reservation-form-3">
                 <div class="form-inner-wrapper">
-                    <h1>Party</h1>
+                    <h1>Количество гостей</h1>
                     <span class="spinner-frame">
 					<span class="spinner-wrapper">
 						<span class="value spinner-party">02</span><i class="fa fa-angle-up spinner-up-party"></i><i
@@ -500,15 +500,30 @@
 					</span>
 				</span>
                 </div>
+                <div class="party-submit form-submit">
+                    <div class="form-close">ЗАКРЫТЬ</div>
+                    <div class="form-next-step">Далее <span><span class="sup">3</span>/<span
+                            class="sub">4</span></span></div>
+                </div>
+            </div>
+            <div class="reservation-form-4">
+                <div class="form-inner-wrapper">
+                    <h1>Информация</h1>
+                    <span class="spinner-frame frame-field-text">
+                        <input class="form-text" type="text" placeholder="Имени">
+                        <input class="form-text" type="text" placeholder="Номера телефона">
+                        <input class="form-text" type="text" placeholder="E-mail">
+                    </span>
+                </div>
                 <div class="reservation-submit form-submit">
-                    <div class="form-close">CLOSE</div>
-                    <div class="form-next-step">FINISH <span><span class="sup">3</span>/<span
-                            class="sub">3</span></span></div>
+                    <div class="form-close">ЗАКРЫТЬ</div>
+                    <div class="form-next-step">ЗАКОНЧИТЬ <span><span class="sup">4</span>/<span
+                            class="sub">4</span></span></div>
                 </div>
             </div>
         </div>
         <div class="home-reservation-back" style="display:none ">
-            <div class="form-close">CLOSE</div>
+            <div class="form-close">ЗАКРЫТЬ</div>
         </div>
     </div>
 
@@ -531,7 +546,7 @@
                        class="otw-party-size-select selectpicker">
             </div>
             <div class="otw-button-wrap">
-                <input type="submit" class="otreservations-submit" value="Find a Table">
+                <input type="submit" class="otreservations-submit" value="Найти столик">
                 <input type="hidden" name="RestaurantID" class="RestaurantID" value="47125">
                 <input type="hidden" name="rid" class="rid" value="47125">
                 <input type="hidden" name="GeoID" class="GeoID" value="15">
@@ -584,6 +599,14 @@
     <div class="berg-overlay-background"></div>
 </div>
 <div class="berg-overlay"></div>
+
+<div class="modal-custom">
+    <div class="content">
+        <p>Спасибо!</p>
+        <p>В ближайшее время с вами свяжется администратор ресторана,
+            чтобы подтвердить ваше бронирование.</p>
+    </div>
+</div>
 
 
 <script>
