--- a/gallery.html
+++ b/gallery.html
@@ -252,8 +252,8 @@
             <div class="gallery-content three-columns" data-columns="3" data-pages="2" id="MixItUpC5909B">
                 <article class="portfolio-grid mix category-cusine category-events category-recipes "
                          style="display: inline-block;" data-bound="">
-                    <a href="#"
-                       class="open-post category-cusine category-events category-recipes " data-post-id="551"></a>
+                    <a href="files/gallery-item-1.png"
+                       class="open-post category-cusine category-events category-recipes gallery-popup-link" data-post-id="551"></a>
                     <div class="img-bg">
                         <img width="500" height="300"
                              src="files/gallery-item-1.png"
@@ -531,6 +531,7 @@
 <script type="text/javascript" src="js/dialog.min.js"></script>
 <script type="text/javascript" src="js/wpdialog.min.js"></script>
 <script type="text/javascript" src="js/datepicker.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/velocity/1.5.0/velocity.min.js"></script>
 <script type="text/javascript">
     jQuery(document).ready(function (jQuery) {
         jQuery.datepicker.setDefaults({
@@ -572,6 +573,7 @@
 <script type="text/javascript" src="js/main.js"></script>
 <script type="text/javascript" src="js/wp-embed.min.js"></script>
 <script type="text/javascript" src="js/js_composer_front.min.js"></script>
+<script type="text/javascript" src="js/jquery.magnific-popup.js"></script>
 
 <div id="ui-datepicker-div" class="ui-datepicker ui-widget ui-widget-content ui-helper-clearfix ui-corner-all"
      style="display: none;"></div>
