--- a/news-content-page.html
+++ b/news-content-page.html
@@ -465,6 +465,7 @@
 <script type="text/javascript" src="js/dialog.min.js"></script>
 <script type="text/javascript" src="js/wpdialog.min.js"></script>
 <script type="text/javascript" src="js/datepicker.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/velocity/1.5.0/velocity.min.js"></script>
 <script type="text/javascript">
     jQuery(document).ready(function (jQuery) {
         jQuery.datepicker.setDefaults({
